# rust-axum-api

./: Cargo.toml  README.md
src/: main.rs  models.rs  mongo.rs
src/controller/: auth_controller.rs  generic_controller.rs
src/middleware/: auth.rs  logging.rs  mod.rs  ownership.rs
src/router/: mod.rs  post_router.rs  review_router.rs  root.rs  user_router.rs
src/utils/: encryption.rs  jwt.rs  mod.rs
