[package]
name = "rust-axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0" , features = ["full"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
axum = {version= "0.6.15", features = ["headers", "macros"]}
tower-http = {version = "0.5.2" , features = ["full"]}
mongodb = "2.8.2"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
once_cell = "1.19.0"
colored = "2.1.0"
tower = "0.4.13"
futures = "0.3.30"